<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sfaci.listapersonalizada.AltaEventos">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/nombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDireccion"
        android:layout_below="@+id/etNombre"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etNombre"
        android:hint="@string/direccion" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etFecha"
        android:layout_below="@+id/etDireccion"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etDireccion"
        android:hint="@string/fecha" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etPrecio"
        android:layout_below="@+id/etFecha"
        android:layout_alignParentStart="true"
        android:hint="@string/precio" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ivFoto"
        android:layout_below="@+id/etPrecio"
        android:layout_alignEnd="@+id/etFecha"
        android:src="@android:drawable/ic_menu_month" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alta"
        android:id="@+id/btAlta"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/btCancelar"
        android:layout_alignTop="@+id/btAlta"
        android:layout_alignEnd="@+id/etFecha" />
</RelativeLayout>
